# baxter_common_ros2

./: ROS1 Sourcing and Setting Up - Andrew
baxter_bridge/: CMakeLists.txt
baxter_description/launch/: baxter_state_publisher_launch.py
